[package]
name = "sketchbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.4.3", features = ["tokio", "zstd"] }
bytes = "1.5.0"
futures = "0.3.28"
pin-project = "1.1.3"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
